--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ DVADESETSEDMOG MARTA 1v
 Beograd (Palilula), Grad Beograd
 11060, Srbija
           </p>
-          <p>E-pošta: <a href="mailto:info@interiorsdesigne.eu">info@interiorsdesigne.eu</a></p>
+          <p>E-pošta: <a href="mailto:info@interiorsdesigne.pro">info@interiorsdesigne.pro</a></p>
         </div>
         <div class="card">
           <h3>Radno vreme &amp; logistika</h3>
@@ -311,3 +311,4 @@ Beograd (Palilula), Grad Beograd
   </footer>
 </body>
 </html>
+
