--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     "@context":"https://schema.org",
     "@type":"Organization",
     "name":"Interior S Designe DOO",
-    "email":"info@interiorsdesigne.eu",
+    "email":"info@interiorsdesigne.pro",
     "address":{
       "@type":"PostalAddress",
       "streetAddress":"DVADESETSEDMOG MARTA 1v",
@@ -311,4 +311,5 @@ Beograd (Palilula), Grad Beograd
   </footer>
 </body>
 </html>
+
 
