--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<h!DOCTYPE html>
 <html lang="sr">
 <head>
   <meta charset="utf-8" />
@@ -86,7 +86,6 @@
   <!-- 1. Glavni ekran -->
   <section class="hero">
     <div class="wrap">
-      <img src="https://i.pinimg.com/736x/0c/d1/26/0cd1266cc43c6453f741a3a1425439a0.jpg" alt="Interior S Designe" style="max-width:280px; margin-bottom:20px; border-radius:12px;">
       <h1>Proizvodimo kuhinje i nameštaj koji izdržavaju svakodnevicu institucija.</h1>
       <p class="lead">
         Od ideje do montaže – projektujemo i izrađujemo kućni i institucionalni nameštaj, kao i kuhinjske elemente po meri.
@@ -311,5 +310,6 @@ Beograd (Palilula), Grad Beograd
   </footer>
 </body>
 </html>
+
 
 
